wp-content/themes/sydneytheme/style.css
/* ... */
    .social .nav__link:last-child {
      padding-right: 0; }
  .social .nav__icon {
    width: 20px; }
    @media (min-width: 48em) {
      .social .nav__icon {
        width: 16px; } }
    @media (min-width: 70em) {
      .social .nav__icon {
        width: 25px; } }

/* styles only for mobile and tablet when menu is a hamburger */
.nav__hamburger-icon {
  display: inline-block;
  cursor: pointer;
  z-index: 2;
  position: absolute;
  top: 30px;
  right: 20px; }
  .nav__hamburger-icon .hamburger-bar1,
  .nav__hamburger-icon .hamburger-bar2,
  .nav__hamburger-icon .hamburger-bar3 {
    width: 30px;
    height: 5px;
    background-color: #EB0029;
    margin: 6px 0;
    transition: 0.4s; }
  @media (min-width: 48em) {
    .nav__hamburger-icon {
      display: none;
      visibility: hidden; } }

/* style the hamburger menu icon to transition into a cross when clicked */
.nav__open .hamburger-bar1 {
  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
  transform: rotate(-45deg) translate(-9px, 6px); }

.nav__open .hamburger-bar2 {
  opacity: 0; }

.nav__open .hamburger-bar3 {
  -webkit-transform: rotate(45deg) translate(-8px, -8px);
  transform: rotate(45deg) translate(-9px, -7px); }

/* inside the hamburger menu once opened */
.nav__open + .nav {
  display: block;
  visibility: visible;
  background: #F7F7F7;
  position: absolute;
  top: 0;
  left: 0;
  animation-name: slidein;
  animation-duration: 0.3s;
  width: 100%;
  height: 100%;
  z-index: 1;
  opacity: 1; }

@keyframes slidein {
  from {
    left: -100%; } }

.slider {
  max-width: 100%;
  position: relative;
  overflow: hidden;
  display: flex; }
  @media (min-width: 48em) {
    .slider {
      height: 670px;
      overflow: visible; } }
  @media (min-width: 87em) {
    .slider {
      height: 870px; } }
  .slider__slide-wrapper {
    position: relative;
    left: 0;
    width: 100%;
    min-width: 100vw;
    transition: all 1.75s ease; }
    @media (min-width: 48em) {
      .slider__slide-wrapper {
        position: absolute; } }
    .slider__slide-wrapper:first-child {
      z-index: 3; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:first-child {
          left: 0; } }
      .slider__slide-wrapper:first-child .slider__image {
        animation: fadein 1s;
        animation-iteration-count: 1;
        animation-timing-function: ease-in-out; }

@keyframes fadein {
  0% {
    opacity: 0.7; }
  100% {
    opacity: 1; } }
        @media (min-width: 48em) {
          .slider__slide-wrapper:first-child .slider__image {
            animation: none; } }
    .slider__slide-wrapper:nth-child(2) {
      z-index: 2; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:nth-child(2) {
          left: -100vw; } }
    .slider__slide-wrapper:last-child {
      z-index: 1; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:last-child {
          left: 0; } }
    .slider__slide-wrapper.previous:first-child {
      z-index: 3; }
    .slider__slide-wrapper.previous:nth-child(2) {
      z-index: 3; }
    .slider__slide-wrapper.previous:last-child {
      z-index: 2; }
  .slider__image {
    width: 100%;
    height: 280px;
    object-fit: cover;
    object-position: left;
    position: relative; }
    @media (min-width: 48em) {
      .slider__image {
        height: 670px;
        position: absolute; } }
    @media (min-width: 87em) {
      .slider__image {
        height: 870px; } }
  .slider__content-box {
    background: white;
    padding: 30px;
    position: relative;
    margin-top: -4px; }
    @media (min-width: 48em) {
      .slider__content-box {
        position: absolute;
        top: 100px;
        right: 130px;
        margin-top: 0;
        padding: 40px;
        max-width: 430px; } }
    @media (min-width: 87em) {
      .slider__content-box {
        max-width: 530px;
        padding: 82px; } }
    .slider__content-box .subtitle {
      font-size: 0.875em;
      padding-bottom: 30px; }
      .slider__content-box .subtitle::after {
        top: 4px;
        max-width: 86px; }
    .slider__content-box--heading {
      text-transform: uppercase;
      padding: 10px 0 15px 0; }
      @media (min-width: 48em) {
        .slider__content-box--heading {
          padding: 20px 0 30px 0; } }
    .slider__content-box--paragraph {
      padding-bottom: 20px;
      font-size: 0.875em;
      line-height: 1.8; }
      @media (min-width: 48em) {
        .slider__content-box--paragraph {
          padding-bottom: 30px;
          max-width: 310px; } }
      @media (min-width: 87em) {
        .slider__content-box--paragraph {
          padding-bottom: 65px; } }
    .slider__content-box .sydney-button__with-icon {
      left: 0;
      transform: none;
      margin: 0 0 10px;
      padding: 20px 48px 20px 36px; }

.slider__arrow--prev {
  position: absolute;
  top: 24%;
  transform: translateY(-24%);
  left: 0;
  z-index: 15; }
  @media (min-width: 48em) {
    .slider__arrow--prev {
      top: 50%;
      transform: translateY(-50%); } }
  .slider__arrow--prev .sydney-button__with-icon {
    margin: 0;
    padding: 22px; }
    @media (min-width: 48em) {
      .slider__arrow--prev .sydney-button__with-icon {
        padding: 32px; } }

.slider__arrow--next {
  position: absolute;
  top: 24%;
  transform: translateY(-24%);
  right: 0;
  z-index: 15; }
  @media (min-width: 48em) {
    .slider__arrow--next {
      top: 50%;
      transform: translateY(-50%); } }
  .slider__arrow--next .sydney-button__with-icon {
    margin: 0;
    padding: 22px; }
    @media (min-width: 48em) {
      .slider__arrow--next .sydney-button__with-icon {
        padding: 32px; } }

.product-grid {
  margin-bottom: 50px;
  background: #F7F7F7; }
  @media (min-width: 48em) {
    .product-grid {
      margin-bottom: 130px; } }
  .product-grid__inner {
    margin: 0 auto;
    max-width: 1552px; }
  .product-grid__heading {
    padding: 60px 20px 45px;
    font-weight: 300;
    text-align: center; }
/* ... */

